--- a/styles/video.css
+++ b/styles/video.css
@@ -9,7 +9,7 @@
       }
 
       .profile-pic{
-        width: 40px;
+        width: 36px;
         border-radius: 25px;
       }
       .video-title{
@@ -17,11 +17,11 @@
         font-size: 14px;
         font-weight: 500;
         line-height: 20px;
-        margin-bottom:12px;
+        margin-bottom:10px;
       }
 
       .thumbnail-row{
-        margin-bottom: 12px;
+        margin-bottom: 8px;
         position: relative;
       }
 
@@ -56,4 +56,9 @@
         padding-top: 4px;
         padding-bottom: 4px;
         border-radius: 2px;
+      }
+
+      .video-title-link {
+        text-decoration: none;
+        color: black;
       }
